# JREP

./: .coverage  .gitattributes  .gitignore  JSONIdea.json  LICENSE  README.md  common.py  exampleJSON.json  jlob.py  jrep.py  pyproject.toml  setup.cfg
.github/workflows/: python-package.yml
Testing/a/a/: a.txt  b.txt
Testing/a/b/: a  b
src/jrep/: __init__.py  common.py  jrep.py  modded_argparse.py  modded_glob.py  processors.py  sorts.py  utils.py
src/jrep.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
testing/: yort.txt
testing/aaa/: aaa.txt
testing/text/: letters.txt  numbers.txt  sentence.txt
tests/: test_jrep.py
