[metadata]
name = JREP
version = 0.1
author = James C. Wise
author_email = jameschristopherwise@gmail.com
description = A CLI tool based on GREP designed for the modern world
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Scripter17/JREP
project_urls =
    Bug Tracker = https://github.com/Scripter17/JREP/issues
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    jrep = jrep.jrep:main